fixed white-space: nowrap; on the movie page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,9 @@ section {
   font-size: 1.2em;
 }
 
+.video-film-well-description {
+  white-space: nowrap;
+}
 .video-film-well-description-rate {
   margin-right: 15px;
   margin-left: 15px;
